# cdg-automation-framework

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: smoke-tests.yml
docker-entrypoint-initdb.d/: seed.sql
docs/architecrure/: README.md
docs/framework/SQLAlchemy/: README.md
docs/framework/alembic/: README.md
docs/framework/allure/: README.md
docs/framework/dependencies/: README.md
docs/framework/httpx/: README.md
docs/framework/pydantic/: README.md
docs/framework/pytest/: README.md
docs/metrics/: README.md
docs/python/: README.md
docs/test_cases/balance_payments/: balance_get_positive.md  balance_notice_get_positive.md
init/bpmn/: sample-process.bpmn
init/db/: init_camunda.sql
src/: zephyr.py
src/domains/: __init__.py
src/domains/db/: __init__.py
src/domains/mq/: __init__.py
src/framework/: __init__.py
src/framework/assertions/: __init__.py
src/framework/clients/: __init__.py  base_client.py  camunda.py  headers.py  kafka.py  rabbitmq.py
src/framework/config/: __init__.py  settings.py
src/framework/db/: __init__.py  session.py
src/framework/fixtures/: __init__.py
src/framework/logging/: __init__.py  api_logger.py  masking.py
src/framework/models/: __init__.py  user.py
src/framework/reporting/: __init__.py  zephyr.py
src/framework/schemas/: __init__.py
src/framework/services/: __init__.py  (+2 more)
tests/: conftest.py
tests/camunda/: test_camunda_process.py
tests/kafka/: test_kafka_topics.py
tests/rabbitmq/: test_rabbitmq_publish.py
tests/users/: test_users.py
(+47 files in other folders)
